--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
 <section class="hero-section">
   <div class="logo-container text-center py-4">
     <a routerLink="/home">
-      <img src="assets/images/uniprotec-logo.png" alt="Academia Uniprotec" class="logo">
+      <img src="assets/images/uniprotec-logo-light.png" width="300px" alt="Academia Uniprotec" class="logo">
     </a>
   </div>
 </section>
