--- a/src/app/component/coursedetails/coursedetails.component.html
+++ b/src/app/component/coursedetails/coursedetails.component.html
@@ -99,7 +99,7 @@
     <!-- Course Video Preview -->
     <div class="course-preview mt-5" @slideInUp>
       <div class="ratio ratio-16x9">
-        <iframe [src]="course.previewVideoUrl | safeUrl" width="560" height="315" frameborder="0"
+        <iframe src="https://www.youtube.com/embed/evT-E8LtsQo" width="560" height="315" frameborder="0"
           allowfullscreen></iframe>
 
         <!--<iframe 
