--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -46,25 +46,25 @@
       <div class="row text-center">
         <div class="col-md-3 col-6 mb-4">
           <div class="stat-item">
-            <div class="stat-number">11+</div>
+            <div class="stat-number">+11</div>
             <div class="stat-label">Años de Experiencia</div>
           </div>
         </div>
         <div class="col-md-3 col-6 mb-4">
           <div class="stat-item">
-            <div class="stat-number">70+</div>
+            <div class="stat-number">+70</div>
             <div class="stat-label">Cursos Semanales</div>
           </div>
         </div>
         <div class="col-md-3 col-6 mb-4">
           <div class="stat-item">
-            <div class="stat-number">500+</div>
+            <div class="stat-number">+500</div>
             <div class="stat-label">Empresas Capacitadas</div>
           </div>
         </div>
         <div class="col-md-3 col-6 mb-4">
           <div class="stat-item">
-            <div class="stat-number">15K+</div>
+            <div class="stat-number">+15k</div>
             <div class="stat-label">Alumnos Egresados</div>
           </div>
         </div>
