--- a/src/app/component/coursedetails/coursedetails.component.html
+++ b/src/app/component/coursedetails/coursedetails.component.html
@@ -61,12 +61,13 @@
             </button>-->
 
             <div class="checkout-options mt-3">
+               <!--
               <button class="btn btn-primary btn-lg w-100" (click)="checkDateAndProceed('regular')">
                 <i class="bi bi-person-check me-2"></i> Inscribirme ahora
-              </button>
+              </button>-->
 
               <button class="btn btn-outline-primary btn-lg w-100 mt-2" (click)="checkDateAndProceed('quick')">
-                <i class="bi bi-lightning-charge me-2"></i> Compra rápida
+                <i class="bi bi-lightning-charge me-2"></i> Inscribirme ahora
               </button>
             </div>
             <div class="date-alert" [ngClass]="{'show-alert': showDateAlert}" @alertAnimation>
