--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,12 @@
 /* Add to styles.scss (global styles) */
 body {
-    background-color: #c9e6f3; /* Light blue to match the top of the gradient */
+    background-color: #e1f7ff;//#c9e6f3; /* Light blue to match the top of the gradient */
   }
   
   /* Or add to app.component.scss */
   :host {
     display: block;
-    background-color: #c9e6f3;
+    background-color:  #e1f7ff;
     min-height: 100vh;
   }
   
